--- a/_posts/2018-04-28-linux-虚拟机新增硬盘无法识别.md
+++ b/_posts/2018-04-28-linux-虚拟机新增硬盘无法识别.md
@@ -6,7 +6,8 @@ tags: [linux, 硬盘]
 ---
 ### 虚拟机Vcenter添加硬盘无法识别
 最近在项目上遇到的一个问题，在Vcenter中为虚拟机添加一块硬盘用于扩展逻辑卷，但是添加之后发现使用
-fdisk -l信息不变，新增的硬盘并没有识别，这种情况下重启虚拟机硬盘就会识别出来，但是环境要求不能重启，经过查找发现有如下方法：
+fdisk -l信息不变，新增的硬盘并没有识别，这种情况下重启虚拟机硬盘就会识别出来，但是环境要求不能重启，
+经过查找发现有如下方法：
 
 先查看/proc/scsi/scsi文件
 ![scsi文件]({{"/assets/linux/1.jpg" | absolute_url}})
