--- a/_posts/2018-04-28-linux-虚拟机新增硬盘无法识别.md
+++ b/_posts/2018-04-28-linux-虚拟机新增硬盘无法识别.md
@@ -11,17 +11,24 @@ fdisk -l信息不变，新增的硬盘并没有识别，这种情况下重启虚
 
 先查看/proc/scsi/scsi文件
 
-![scsi文件]({{"/assets/linux/1.jpg" | absolute_url}})
+![scsi文件]({{"/assets/linux/1.png" | absolute_url}})
 
 使用命令 echo "scsi add-single-device 2 0 2 0">/proc/scis/scsi
+
 \# echo "scsi add-single-device w x y z" > /proc/scsi/scsi
+
 参数值 w、x、y 、 z，解释如下：
+
 w（Host）是主机适配器标识，第一个适配器为零（0）
+
 x （Channel）是主机适配器上的 SCSI 通道，第一个通道为零（0）
+
 y （ID）是设备的 SCSI 标识
+
 z （Lun）是 LUN 号，第一个 LUN 为零（0）
 
-![图片]({{"/assets/linux/2.jpg" | absolute_url}})
+
+![图片]({{"/assets/linux/2.png" | absolute_url}})
 
 再次使用fdisk -l查看发现新增的磁盘已经能显示相关信息了
 
