--- a/_posts/2018-06-10-other-记潘神北上.md
+++ b/_posts/2018-06-10-other-记潘神北上.md
@@ -1,3 +1,12 @@
+---
+layout: post
+category: "other"
+title:  "记潘神北上"
+tags: [杂记]
+---
+
+###记潘神北上
+
   潘神是之前刚工作在宿舍住的时候，同寝室的一个老哥，比我大4、5岁，当时刚来，晚上经常帮他做培训时候的作业，一起打球，之后宿舍到期，又一起租了房子，潘神这个名字是另一个室友老耿说的，老耿和他是研究生同学。
 今天潘神收拾东西走了，说是要去北京找工作，以后可能都不会回来了，虽然这小子已经半年没回来了，我已经习惯了，但是这样的离开，还是让人觉得有些突然，不适应，还记得去年这个时候，我们刚租下这个房子，两个人找了好几家，最后好不容易找到这个比较合适，又做起了二房东，把其中一间租给了另一个公司的小伙，想想一年真的很快啊。
 今天吃饭，我问潘神你儿子快过生日了吧，他说是，快了，去年刚租下房子，他就回家了，请了陪产假，儿子出生，之后回来就出差去北京了，一待就是大半年，或许是儿子出生后压力的增大，也或许是工作的不顺心，这一年感觉潘神少了些刚来时候的笑，多了些压抑，今年因为种种的原因，公司离职了许多，或许之前每年都是这样，只是今年我比较关注吧。
