--- a/_posts/2018-04-28-linux-虚拟机新增硬盘无法识别.md
+++ b/_posts/2018-04-28-linux-虚拟机新增硬盘无法识别.md
@@ -32,4 +32,4 @@ z （Lun）是 LUN 号，第一个 LUN 为零（0）
 
 再次使用fdisk -l查看发现新增的磁盘已经能显示相关信息了
 
-scsi文件中会有两条记录，在添加时选择Type:   Direct-Access的Host类型添加
+scsi文件中会有两条记录，在添加时选择Type:   Direct-Access的CD-ROM类型添加
